File: plugins/nexus-blobstore-s3/src/test/java/org/sonatype/nexus/blobstore/virtualthread/VirtualThreadTestGroup.java